--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,5 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+/*必须引入全局CSS样式*/
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+
+/*如果需要md-icon需要引入*/
 @import '~https://fonts.googleapis.com/icon?family=Material+Icons';
 
 body {
