--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -18,6 +18,8 @@
     <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button>-->
   </md-toolbar>
 
+  <app-sidebar></app-sidebar>
+
   <div class="app-content">
     <router-outlet></router-outlet>
   </div>
